[tool.poetry]
name = "MYBOT"
version = "0.1.0"
description = "Project template for GenAi BOT, using Poetry."
license = "MIT"
authors = ["LittleViz <codeProjects.gmm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "*"
